--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,13 @@ margin-bottom: 300px;
 background-image: url("/background.png");
 }
 
+#gamePageTopDiv{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
 .elementsImg{
+    position: relative;
     border-radius: 50%;
     width:100px;
     height: 100px;
@@ -66,9 +72,16 @@ background-image: url("/background.png");
     height: 300px;
     border: solid 5px green;
 }
-#userScoreDiv{
-    border: solid 5px red;
+#userPages{
+    border: solid 5px blue;
+    width: 100px;
+    height: 100px;  
 }
+#userSide{
+    border: solid 5px orange;
+    width: 450px;
+}
+
 #elementsDragon{
 display: grid;
 grid-template-columns: 85px 85px;
@@ -78,4 +91,13 @@ background-size: 100%;
 width: 400px;
 height: 300px;
 border: solid 5px green;
+}
+#dragonSide{
+border: solid 5px orange;
+width: 450px;
+}
+#dragonPages{
+border: solid 5px blue;
+width: 100px;
+height: 100px;
 }
