--- a/styles.css
+++ b/styles.css
@@ -51,11 +51,15 @@ background-image: url("/background.png");
 width: 1500px;
 height: 1500px;
 }
-
+#rabbitGame{
+margin-left: 350px;
+width: 100px;
+}
 #gamePageTopDiv{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    margin-left: 45px;
 }
 .elementsImg{
     position: relative;
@@ -63,7 +67,7 @@ height: 1500px;
     width:100px;
     height: 100px;
     margin-left:135px;
-    margin-top: 40px;
+    margin-top: 35px;
 }
 #elementsUser{
     display: grid;
@@ -73,6 +77,7 @@ height: 1500px;
     background-size: 100%;
     width: 400px;
     height: 300px;
+    margin-top: -50px;
 
 }
 #userPages{
@@ -83,8 +88,8 @@ height: 1500px;
     height: 110px;  
 }
 #userSide{
-    margin-top: 100px;
     width: 450px;
+
 }
 
 #elementsDragon{
@@ -95,10 +100,16 @@ background-image: url("/game/elementsframeDragon.png");
 background-size: 100%;
 width: 400px;
 height: 300px;
+margin-top: -60px;
 }
 #dragonSide{
 width: 450px;
 margin-top: 100px;
+}
+#dragonGame{
+    margin-left: -60px;
+    width: 150px;
+    margin-top: -85px;
 }
 #dragonPages{
     background-image: url("/pagesFrameDragon.png");
@@ -110,18 +121,25 @@ margin-top: 100px;
 #stolenPage{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     background-image: url("/stolenPage.png");
     position: relative;
     background-size: cover;
     width: 1500px;
     height: 1100px;
-    margin-top: -50px;
+    margin-top: -150px;
     
 }
-
+#inventionInfoDiv{
+    margin-left: 50px;
+    margin-top:250px;
+    width: 500px
+}
 #imgOfInvention{
+    margin-top: 300px;
+    margin-left: 150px;
     width: 500px;
+    height: 450px;
 }
 #choices{
     display: grid;
