--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Styles for main page */
-body{
+#bodyWelcome{
     background-image: url("/background.jpg");
     background-size: cover;
 }
@@ -202,4 +202,16 @@ margin-top: 100px;
     height: 300px;
     margin-left: 25px;
     margin-top: -30px;
+}
+/* Game Over Loose Page */
+#gameOverLooseBody{
+    background-size: cover;
+    background-repeat: no-repeat;
+    size: 100%;
+    width: 100%;
+    
+}
+#fire{
+    margin-top:1000px;
+    margin-left: 500px;
 }
