--- a/styles.css
+++ b/styles.css
@@ -115,17 +115,26 @@ margin-top: 20px;
 
 }
 #userPages{
-margin-left: 65px;
-margin-top: -75px;
+margin-left: 45px;
+margin-top: -85px;
+width: 30px;
+text-align: center;
+font-family: "Milonga", cursive;
 }
 #userScore{
-    background-image: url("/pagesFrame.png");
+    background-image: url("/scoreFrame.png");
     margin-left: 45px;
     background-size: cover;
     margin-top: 50px;
     width: 115px;
     height: 110px;  
 }
+#userScoreTxt{
+    margin-left: 100px;
+    margin-top: -70px;
+    font-family: "Milonga", cursive;
+    font-size: 25px;
+    }
 #userSide{
     width: 450px;
 
@@ -153,17 +162,26 @@ margin-top: 100px;
     margin-top: -85px;
 }
 #dragonPages{
-    margin-left: 325px;
-    margin-top: -75px;
+    margin-left: 315px;
+    margin-top: -85px;
+    width: 30px;
+    text-align: center;
+    font-family: "Milonga", cursive;
     
 }
 #dragonScore{
-    background-image: url("/pagesFrameDragon.png");
+    background-image: url("/scoreFrameDragon.png");
     margin-left: 245px;
     background-size: cover;
     width: 115px;
     height: 110px;
     margin-top: 50px;
+}
+#dragonScoreTxt{
+margin-left: 275px;
+margin-top: -70px;
+font-family: "Milonga", cursive;
+font-size: 25px;
 }
 #stolenPage{
     display: flex;
@@ -222,6 +240,12 @@ margin-top: 100px;
     margin-left:80px;
     margin-top: 40px;
 }
+#winerMiniGame{
+margin-left: 150px;
+margin-top: -45px;
+font-family: "Milonga", cursive;
+font-size: 25px;
+}
 #continueOrQuit{
     display:flex;
     flex-wrap: wrap;
@@ -236,7 +260,7 @@ margin-top: 100px;
 }
 #questionButtons{
 margin-bottom: 50px;
-margin-left: 160px;
+margin-left: 130px;
 }
 #question{
     margin-top: 80px;
