--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ flex-wrap: wrap;
 flex-direction: column;
 align-content: center;
 text-align: center;
+margin-top: -200px;
 }
 
 #middleMainDiv{
@@ -56,11 +57,54 @@ height: 300px;
 opacity: 0;
 margin-top: -110px;
 }
+#gears{
+    display: flex;
+    flex-direction: column;
+}
+
+#gear1{
+    width: 100px;
+    height: 100px;
+    animation: rotateleft 5s linear infinite;
+}
+#gear2{
+    width: 100px;
+    height: 100px;
+    margin-top: -60px;
+    margin-left: 39px;
+    animation: rotateright 5s linear infinite;
+}
+#gear3{
+    width: 100px;
+    height: 100px;
+    margin-top: -60px;
+    animation: rotateleft 5s linear infinite;
+}
+
 @keyframes 
 animateRules{
    100%{
 
         opacity:1;
+    }
+}
+@keyframes
+rotateleft{
+    from{
+        transform: rotate(0deg);
+    }
+    to{
+        transform: rotate(360deg);
+      
+    }
+}
+@keyframes
+rotateright{
+    from{
+        transform: rotate(359deg);
+    }
+    to{
+        transform: rotate(0deg);
     }
 }
 
@@ -187,9 +231,7 @@ font-family: "Milonga", cursive;
 font-size: 25px;
 }
 #stolenPage{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    
     background-image: url("/stolenPage.png");
     position: relative;
     background-size: cover;
@@ -199,6 +241,12 @@ font-size: 25px;
     margin-left:-50px;
     opacity: 0;
     
+}
+#stolenInvDiv{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    opacity: 1;
 }
 #inventionName{
     font-family: "Sancreek", cursive;
@@ -286,13 +334,22 @@ margin-left: 130px;
     font-family: "Milonga", cursive;
     font-size: 25px; 
 }
-/* #loose{
+#loose{
     font-family: 'Sancreek', cursive;
     font-size: 55px;
     color: rgb(255, 150, 12);
     margin-left: 550px;
     margin-top:100px;
-} */
+    display:none;
+}
+#win{
+    font-family: 'Sancreek', cursive;
+    font-size: 55px;
+    color: rgb(12, 247, 255);
+    margin-left: 550px;
+    margin-top:100px;
+    display:none;
+}
 
 /* #coverWin{
     opacity:0;
@@ -305,18 +362,7 @@ margin-left: 130px;
     left:0px; 
     z-index:1;
 } */
-/* #coverLoose{
-     opacity:0;
-    background-image: url("/LooseBackground.png");
-    background-size:100%;
-    background-repeat: no-repeat;
-    position:fixed;
-    width:100%;
-    height:100%;
-    top:0px;
-    left:0px; 
-    z-index:0; 
-} */
+
 
 
 @keyframes 
