--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ rotateright{
     display: grid;
     grid-template-columns: 85px 85px;
     grid-template-rows: 90px 90px;
-    background-image: url("/game/elementsframe.png");
+    background-image: url("/elementsframe.png");
     background-size: 100%;
     width: 400px;
     height: 300px;
@@ -219,7 +219,7 @@ rotateright{
     display: grid;
     grid-template-columns: 85px 85px;
     grid-template-rows: 90px 90px;
-    background-image: url("/game/elementsframeDragon.png");
+    background-image: url("/elementsframeDragon.png");
     background-size: 100%;
     width: 400px;
     height: 300px;
@@ -337,7 +337,7 @@ rotateright{
     display:flex;
     flex-wrap: wrap;
     flex-direction: column;
-    background-image: url("/game/question.png");
+    background-image: url("question.png");
     background-size: 100%;
     background-repeat: no-repeat;
     width: 400px;
