--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Styles for main page */
 #bodyWelcome{
-    background-image: url("/background.jpg");
+    background-image: url("background.jpg");
     background-size: cover;
 }
 #welcome{
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url("/pageMain.png");
+    background-image: url("pageMain.png");
     background-repeat: no-repeat;
     background-size: cover;
     width: 700px;
@@ -137,7 +137,7 @@ rotateright{
 /* Styles for Game page */
 
 #gamePageBody{
-    background-image: url("/background.png");
+    background-image: url("background.png");
     width: 1500px;
     height: 1500px;
 }
@@ -184,7 +184,7 @@ rotateright{
     display: grid;
     grid-template-columns: 85px 85px;
     grid-template-rows: 90px 90px;
-    background-image: url("/elementsframe.png");
+    background-image: url("elementsframe.png");
     background-size: 100%;
     width: 400px;
     height: 300px;
@@ -199,7 +199,7 @@ rotateright{
     font-family: "Milonga", cursive;
 }
 #userScore{
-    background-image: url("/scoreFrame.png");
+    background-image: url("scoreFrame.png");
     margin-left: 45px;
     background-size: cover;
     margin-top: 50px;
@@ -219,7 +219,7 @@ rotateright{
     display: grid;
     grid-template-columns: 85px 85px;
     grid-template-rows: 90px 90px;
-    background-image: url("/elementsframeDragon.png");
+    background-image: url("elementsframeDragon.png");
     background-size: 100%;
     width: 400px;
     height: 300px;
@@ -244,7 +244,7 @@ rotateright{
     
 }
 #dragonScore{
-    background-image: url("/scoreFrameDragon.png");
+    background-image: url("scoreFrameDragon.png");
     margin-left: 245px;
     background-size: cover;
     width: 115px;
@@ -259,7 +259,7 @@ rotateright{
 }
 #stolenPage{
     
-    background-image: url("/stolenPage.png");
+    background-image: url("stolenPage.png");
     position: relative;
     background-size: cover;
     width: 1500px;
@@ -298,7 +298,7 @@ rotateright{
     display: grid;
     grid-template-columns: 117px 117px;
     flex-direction: row;
-    background-image: url("/choiceframe.png");
+    background-image: url("choiceframe.png");
     background-size: cover;
     width: 500px;
     height: 350px;
